# yubikey-signer

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md  TODO.md  audit.toml  build.rs  deny.toml  setup-windows-build.bat  setup-windows-build.ps1  vcpkg-env.ps1
.github/: allowed_signers  dependabot.yml
.github/workflows/: auto-tag-on-merge.yml  ci.yml  release.yml  security.yml
docker/: Dockerfile.aarch64-direct-usb  Dockerfile.aarch64-gnu  Dockerfile.aarch64-musl  Dockerfile.aarch64-static  Dockerfile.aarch64-static-v2  Dockerfile.x86_64-musl  README.md  docker-compose.yml
docs/: CI-CD.md  Implementation-Summary.md  msi-signing.md  remote-signing.md
examples/: check_hash.rs  compare_dir.rs  compare_hash.rs  debug_hash.rs  extract_sig.rs  test_lib_hash.rs  test_sort.rs  type_demo.rs
scripts/: SCRIPTS_TOC.md  analyze-pe.ps1  compare-embedding.ps1  create-test-msi.ps1  extract_pkcs7.ps1  test.ps1  verify_signature.ps1
src/: authenticode.rs  authenticode_new.rs  auto_detect.rs  cert_validator.rs  config.rs  error.rs  lib.rs  lib_tests.rs  main.rs  pe.rs  progress.rs  signing.rs  timestamp.rs  timestamp_new.rs  types.rs  yubikey_ops.rs  yubikey_ops_new.rs  yubikey_ops_old.rs  yubikey_ops_tests.rs
src/adapters/: backend.rs  mod.rs  timestamp_http_client.rs
src/adapters/ccid/: mod.rs  piv.rs  transport.rs
src/adapters/remote/: client.rs  mod.rs  protocol.rs  server.rs
src/adapters/yubikey/: auth_bridge.rs  mod.rs  ops.rs
src/domain/: constants.rs  mod.rs  types.rs  verification.rs
src/domain/attrs/: mod.rs
src/domain/crypto/: cert.rs  digest_bytes.rs  hash.rs  mod.rs  signature.rs
src/domain/msi/: cfb_writer.rs  embed.rs  hash.rs  mod.rs  parse.rs
src/domain/pe/: hash_view.rs  layout.rs  mod.rs  parse.rs
src/domain/pkcs7/: attributes.rs  mod.rs  timestamp.rs
src/domain/spc/: constants.rs  mod.rs
src/infra/: config.rs  error.rs  mod.rs  progress.rs
src/pipelines/: mod.rs  sign.rs  timestamp.rs  verify.rs
src/services/: attr_builder.rs  authenticode.rs  auto_detect.rs  cert_validator.rs  embedder.rs  file_format.rs  mod.rs  msi_signer.rs  pe_hasher.rs  pkcs7.rs  pkcs7_builder.rs  signed_attributes_builder.rs  signing.rs  spc_builder.rs  timestamp.rs  timestamp_applier.rs  timestamp_parser.rs  timestamp_request_builder.rs  verification.rs
test-data/: cert.pem  test_unsigned.msi
tests/: cli_integration_edge_cases.rs  comprehensive_edge_cases.rs  cryptographic_edge_cases.rs  debug_signing.rs  domain_crypto_tests.rs  end_to_end_signing.rs  integration_hardware.rs  lib_integration_tests.rs  msi_regression_tests.rs  msi_signing_tests.rs  pe_domain_tests.rs  pe_format_edge_cases.rs  pipeline_parity.rs  pkcs7_domain_tests.rs  remote_signing_integration.rs  signed_attributes_tests.rs  spc_domain_tests.rs  test_digest_info_sizes.rs  test_pkcs7_authenticated_attributes.rs  test_yubikey_raw_api.rs  test_yubikey_signing_formats.rs  timestamp_domain_tests.rs  verification_workflow.rs  yubikey_adapter_tests.rs
tests/common/: mod.rs  test_env.rs
