[package]
name = "yubikey-signer"
version = "0.2.0"
edition = "2021"
description = "YubiKey code signing utility"
authors = ["Daniel Gehriger <gehriger@linkcad.com>"]
license = "MIT"

[lib]
name = "yubikey_signer"
path = "src/lib.rs"

[[bin]]
name = "yubikey-signer"
path = "src/bin/main.rs"

[dependencies]
# YubiKey PIV integration
yubikey = "0.8"

# Cryptographic operations  
sha2 = "0.10"
x509-cert = "0.2"
der = "0.7"
pem = "3.0"
pkcs1 = "0.7"
pkcs7 = "0.4.1"
spki = "0.7"
hex = "0.4"
oid = "0.2"

# PE file manipulation
goblin = "0.10.0"

# HTTP client for timestamping
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

# Command line interface
clap = { version = "4.5.43", features = ["derive"] }
rpassword = "7.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Terminal utilities
atty = "0.2"
env_logger = "0.11"

# Configuration management
toml = "0.9.5"
dirs = "6.0.0"
miette = { version = "7.0", features = ["fancy"] }

# File operations
tempfile = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"

# Logging
log = "0.4"

[dev-dependencies]
# Testing
hex = "0.4"
mockall = "0.13.1"
tokio-test = "0.4"

[features]
# Optional test feature to enable network-related tests
network-tests = []
# Optional test feature to enable hardware-related tests (requires YubiKey)
hardware-tests = []
# Combined feature for comprehensive testing (hardware + network)
integration-tests = ["hardware-tests", "network-tests"]
