[package]
name = "yubikey-signer"
version = "0.5.0"
edition = "2021"
description = "YubiKey code signing utility"
authors = ["Daniel Gehriger <gehriger@linkcad.com>"]
license = "Apache-2.0"
default-run = "yubikey-signer"
readme = "README.md"
repository = "https://github.com/dgehri/yubikey-signer"
homepage = "https://github.com/dgehri/yubikey-signer"
documentation = "https://github.com/dgehri/yubikey-signer#readme"

[lib]
name = "yubikey_signer"
path = "src/lib.rs"

[[bin]]
name = "yubikey-signer"
path = "src/bin/main.rs"

[[bin]]
name = "yubikey-proxy"
path = "src/bin/proxy.rs"
required-features = ["proxy-server"]

[dependencies]
# YubiKey PIV integration (optional - can use direct-usb instead)
yubikey = { version = "0.8", optional = true }

# Cryptographic operations  
sha2 = "0.10"
x509-cert = "0.2"
der = "0.7"
pem = "3.0"
pkcs1 = "0.7"
pkcs7 = "0.4.1"
spki = "0.7"
hex = "0.4"
oid = "0.2"
rand = { version = "0.9.2", features = ["std", "std_rng"] }

# OpenSSL for PKCS#7 Authenticode support (required)
# Windows: Automatically uses vcpkg OpenSSL (preferred)
# Linux/macOS: Uses system OpenSSL or vendored if enabled
openssl = "0.10"
openssl-sys = "0.9"

# PE file manipulation
goblin = "0.10.1"

# HTTP client for timestamping
reqwest = { version = "0.12.23", features = ["rustls-tls", "json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

# HTTP server for proxy (optional)
warp = { version = "0.3", optional = true, features = ["tls"] }

# Direct USB access for YubiKey (no pcscd required)
rusb = { version = "0.9", optional = true }

# Base64 encoding for remote protocol
base64 = "0.22"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Command line interface
clap = { version = "4.5.45", features = ["derive", "env"] }
rpassword = "7.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.15"

# Terminal utilities
atty = "0.2"
env_logger = "0.11"

# Configuration management
toml = "0.9.5"
dirs = "6.0.0"
miette = { version = "7.0", features = ["fancy"] }

# File operations
tempfile = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"

# Logging
log = "0.4"

[build-dependencies]
ureq = { version = "2.0", default-features = false, features = ["tls"] }
num_cpus = "1.0"
cc = "1.0"

[dev-dependencies]
# Testing
hex = "0.4"
mockall = "0.13.1"
tokio-test = "0.4"

[features]
# Default feature - includes pcsc backend
default = ["pcsc-backend"]

# PC/SC backend using yubikey crate (requires pcscd on Linux)
pcsc-backend = ["yubikey"]

# Use vendored OpenSSL (for Linux/macOS CI where no system OpenSSL should be used)
vendored-openssl = ["openssl/vendored", "openssl-sys/vendored"]

# Force static linking on Windows (for release binaries without DLL dependencies)
static-openssl = []

# Enable the proxy server binary
proxy-server = ["warp"]

# Direct USB backend for proxy (no pcscd required) 
direct-usb = ["rusb"]

# Optional test feature to enable network-related tests
network-tests = []
# Optional test feature to enable hardware-related tests (requires YubiKey)
hardware-tests = []
# Combined feature for comprehensive testing (hardware + network)
integration-tests = ["hardware-tests", "network-tests"]
